brand complete working on color and size
