# app/Http/Controllers/ColorController.php
@@ -1,0 +1,79 @@
+<?php
+
+namespace App\Http\Controllers;
+
+use Illuminate\Http\Request;
+
+class ColorController extends Controller
+{
+    const PER_PAGE = 10;
+
+    /**
+     * Display a listing of the resource.
+     */
+    public function index(Request $request)
+    {
+        $colors = Color::query();
+
+        if ($request->has('search')) {
+            $colors->where('name', 'like', '%' . $request->search . '%');
+        }
+
+        if ($request->get('get_all')) {
+            return response()->json(['success' => true, 'data' => $colors->get()]);
+        }
+
+        $colors = $colors->paginate($request->pagination ?? self::PER_PAGE);
+
+        return response()->json(['success' => true, 'data' => $colors]);
+
+    }
+
+    /**
+     * Show the form for creating a new resource.
+     */
+    public function create()
+    {
+        //
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     */
+    public function store(Request $request)
+    {
+
+    }
+
+    /**
+     * Display the specified resource.
+     */
+    public function show(string $id)
+    {
+        //
+    }
+
+    /**
+     * Show the form for editing the specified resource.
+     */
+    public function edit(string $id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     */
+    public function update(Request $request, string $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     */
+    public function destroy(string $id)
+    {
+        //
+    }
+}
